<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_custom"
        android:background="@color/main_background"
        android:gravity="center"
        android:text="@string/exit_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_big" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_custom">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@color/main_background"
            android:drawableLeft="@drawable/ic_exit"
            android:drawableStart="@drawable/ic_exit"
            android:onClick="exitClicked"
            android:text="@string/ok"
            android:textSize="@dimen/text_small"
            android:textColor="@color/colorPrimaryDark" />


        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_small"
            android:background="@color/main_background"
            android:drawableRight="@drawable/ic_cancel"
            android:onClick="cancelClicked"
            android:paddingLeft="5dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>
</LinearLayout>